# OS-LAB2-Task2

./: CMakeLists.txt  build_gcc.sh  config.h.in  sieve_fork_pipe.c  sieve_iterative.c  sieve_named_pipe.c
cmake/: config.cmake
